fix: ajusta requisicao de efetuar pedido para receber apenas id e qtd do produto